question paper overflow fixed

--- a/knexsol/knexsol.v0.1.1.max.css
+++ b/knexsol/knexsol.v0.1.1.max.css
@@ -399,7 +399,8 @@ a:hover.sb-pinterest {
 .qa-panel .panel-heading .panel-title pre {
     background-color: #fff;
     border: none;
-    border-radius: 0
+    border-radius: 0;
+    overflow: auto;
 }
 
 .qa-panel .panel-heading .panel-title.question {
